@@ -9,6 +9,8 @@ lintian-brush (0.75) UNRELEASED; urgency=medium
   * Probe for gitlab URLs.
   * Only remove overrides if asyncpg is available to contact UDD.
     fixers/unused-override.py
+  * debian-watch-file-is-missing: Cope with the fact that a python
+    package may not be on pypi.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 26 Jul 2020 20:06:29 +0000
 
